add heatmap
